@@ -1,3 +1,9 @@
+2009-12-15  Jaroslav Hajek  <highegg@gmail.com>
+
+	* DLD-FUNCTIONS/cellfun.cc (Fcellfun): Preserve original nargout. Call
+	functions with this value. Use nargout1 to possibly accumulate extra
+	outputs, as long as they are defined.
+
 2009-12-14  Jaroslav Hajek  <highegg@gmail.com>
 
 	* ov-range.cc (octave_range::do_index_op): Defer single subscript to
